style: cards (fix overlapping bug on projects);

--- a/assets/sass/includes/containers/_cards.scss
+++ b/assets/sass/includes/containers/_cards.scss
@@ -718,7 +718,6 @@
 
         &__image {
             background-color: $light-grey;
-            padding-bottom: 0;
         }
     }
 }
